--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,20 @@
-name: CI
+name: Continuous Integration
 
- on:
-   push:
-     branches:
-       - main
+on:
+  pull_request:
+    branches:
+      - main
+  push:
+    branches:
+      - main
 
- jobs:
-   build:
-     runs-on: ubuntu-latest
+jobs:
+  build:
+    runs-on: ubuntu-latest
 
-     steps:
-       - name: Get Your Code
-         uses: actions/checkout@v2
+    steps:
+      - name: Get Your Code
+        uses: actions/checkout@v2
 
-       - name: Say Hello to the World
-         run: echo "Hello, World!"
+      - name: Say Hello to the World
+        run: echo "Hello, World!"
